--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -245,3 +245,13 @@ subject=Subject
 content=Content
 isHtml=Is it html?
 attachments=Attachments
+sendEmailSmtpWithDigitalCertificate=Send mail using SMTP and digital certificate
+functionToSendEmailSmtpWithDigitalCertificate=Function to send mail using SMTP and digital certificate
+keyJks=Digital certificate key
+keyJksPassword=Digital certificate key password
+sleep=sleep
+functionToSleep=Function to make the sleeping process
+timeSleepInSecond=Number of seconds the process should sleep
+throwException=Exception raise
+functionToThrowException=Exception handling function
+exceptionToBeThrow=Exception to be raised (Object of the exception or description itself)
