--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -245,3 +245,13 @@ subject=Assunto
 content=Conteúdo
 isHtml=É html?
 attachments=Anexos
+sendEmailSmtpWithDigitalCertificate=Enviar email usando SMTP e certificado digital
+functionToSendEmailSmtpWithDigitalCertificate=Função para enviar email usando SMTP e certificado digital
+keyJks=Chave do certificado digital
+keyJksPassword=Senha da chave do certificado digital
+sleep=Dormir
+functionToSleep=Função para fazer o processo dormir
+timeSleepInSecond=Quantidade de segundos que o processo deve dormir
+throwException=Levantar exceção
+functionToThrowException=Função para levantar exceção
+exceptionToBeThrow=Exceção a ser levantada (Objeto da própria exceção ou descrição)
