--- a/src/main/java/cronapi/i18n/Messages_en_US.txt
+++ b/src/main/java/cronapi/i18n/Messages_en_US.txt
@@ -255,3 +255,41 @@ timeSleepInSecond=Number of seconds the process should sleep
 throwException=Exception raise
 functionToThrowException=Exception handling function
 exceptionToBeThrow=Exception to be raised (Object of the exception or description itself)
+loginPasswordInvalid=Login or password invalid
+openFTPConnection=Open FTP connection
+functionToOpenFTPConnection=Function to open FTP connection
+closeFTPConnection=Close FTP connection
+functionToCloseFTPConnection=Function to close FTP connection
+FtpConnectionObj=FTP connection returned from "Open FTP connection"
+ftpServerRefusedConnection=FTP server refused connection
+setPassiveModeFTP=Set FTP connection to passive mode
+functionToSetPassiveModeFTP=Function to set FTP connection to passive mode
+sendFTPCommand=Send FTP command
+functionToSendFTPCommand=Function to send FTP command
+commandFtp=FTP command
+getCurrentWorkingDirectoryFTP=Get current working directory FTP
+functionToGetCurrentWorkingDirectoryFTP=Function to get current working directory FTP
+listFTPFiles=List files from FTP
+functionToListFTPFiles=Function to list files from FTP
+withDetail=With details?
+listFTPFilesFromFolder=List files in the FTP folder
+functionToListFTPFilesFromFolder=Function to list files in the FTP folder
+changeFTPFolder=Change FTP folder
+functionToChangeFTPFolder=Function to change FTP folder
+changeToParentFTPFolder=Change to parent FTP folder
+functionToChangeToParentFTPFolder=Function to change to parent FTP folder
+deleteFTPFolder=Delete FTP folder
+functionToDeleteFTPFolder=Function to delete FTP folder
+deleteFTPFile=Delete FTP file
+functionToDeleteFTPFile=Function to delete FTP file
+createNewFTPFolder=Create new FTP folder
+functionToCreateNewFTPFolder=Function to create new FTP folder
+uploadFileToFTP=Upload file to FTP
+functionToUploadFileToFTP=Function to upload file to FTP
+pathOfFolderFTP=Folder path FTP
+isBinaryFile=Binary file?
+downloadFileFromFTP=Download file from FTP
+functionToDownloadFileFromFTP=Function to download file from FTP
+saveFileInPath=Save file in path
+fileToDownloadFTPPath=Path of file in FTP
+errorDownloadFile=Error downloading file
