--- a/src/main/java/cronapi/i18n/Messages_pt_BR.txt
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.txt
@@ -255,3 +255,41 @@ timeSleepInSecond=Quantidade de segundos que o processo deve dormir
 throwException=Levantar exceção
 functionToThrowException=Função para levantar exceção
 exceptionToBeThrow=Exceção a ser levantada (Objeto da própria exceção ou descrição)
+loginPasswordInvalid=Login ou senha inválidos
+openFTPConnection=Abrir conexão FTP
+functionToOpenFTPConnection=Função para abrir conexão FTP
+closeFTPConnection=Fechar conexão FTP
+functionToCloseFTPConnection=Função para fechar conexão FTP
+ftpConnectionObj=Conexão FTP retornada da função "Abrir conexão FTP"
+ftpServerRefusedConnection=O servidor FTP recusou a conexão
+setPassiveModeFTP=Setar conexão FTP para o modo passivo
+functionToSetPassiveModeFTP=Função para setar conexão FTP para o modo passivo
+sendFTPCommand=Enviar comando FTP
+functionToSendFTPCommand=Função para enviar comando FTP
+commandFtp=Comando FTP
+getCurrentWorkingDirectoryFTP=Obter pasta de trabalho atual do FTP
+functionToGetCurrentWorkingDirectoryFTP=Função para obter pasta de trabalho atual do FTP
+listFTPFiles=Listar arquivos do FTP
+functionToListFTPFiles=Função para listar arquivos do FTP
+withDetail=Com detalhes?
+listFTPFilesFromFolder=Listar aquivos da pasta FTP
+functionToListFTPFilesFromFolder=Função para listar aquivos da pasta FTP
+changeFTPFolder=Trocar pasta FTP
+functionToChangeFTPFolder=Função para trocar pasta FTP
+changeToParentFTPFolder=Mudar para pasta FTP acima
+functionToChangeToParentFTPFolder=Função para mudar para pasta FTP acima
+deleteFTPFolder=Deletar pasta FTP
+functionToDeleteFTPFolder=Função para deletar pasta FTP
+deleteFTPFile=Deletar arquivo FTP
+functionToDeleteFTPFile=Função para deletar arquivo FTP
+createNewFTPFolder=Criar nova pasta no FTP
+functionToCreateNewFTPFolder=Função para criar nova pasta no FTP
+uploadFileToFTP=Enviar arquivo para FTP
+functionToUploadFileToFTP=Função para enviar arquivo para FTP
+pathOfFolderFTP=Caminho da pasta no FTP
+isBinaryFile=Arquivo binário?
+downloadFileFromFTP=Fazer download de arquivo do FTP
+functionToDownloadFileFromFTP=Função para fazer download de arquivo do FTP
+saveFileInPath=Caminho de destino para salvar o arquivo local
+fileToDownloadFTPPath=Caminho do arquivo FTP para download
+errorDownloadFile=Erro ao efetuar o download do arquivo
