Adicionado traduções de texto de suporte

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -291,4 +291,4 @@ downloadFileFromFTP=Download file from FTP
 functionToDownloadFileFromFTP=Function to download file from FTP
 saveFileInPath=Save file in path
 fileToDownloadFTPPath=Path of file in FTP
-errorDownloadFile=Error downloading file
+errorDownloadFile=Error downloading filename=Namedescription=Descriptionparams=Paramsreturn=ReturnObjectType.BOOLEAN=BooleanObjectType.LONG=LongObjectType.DOUBLE=DoubleObjectType.DATETIME=DateTimeObjectType.STRING=StringObjectType.LIST=ListObjectType.MAP=MapObjectType.DATASET=DataSetObjectType.JSON=JsonObjectType.XML=XmlObjectType.OBJECT=ObjectObjectType.UNKNOWN=UnknownObjectType.VOID=Void
