--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -293,3 +293,4 @@ saveFileInPath=Caminho de destino para salvar o arquivo local
 fileToDownloadFTPPath=Caminho do arquivo FTP para download
 errorDownloadFile=Erro ao efetuar o download do arquivo
 
+name=Nomedescription=Descriçãoparams=Paramêtroreturn=RetornoObjectType.BOOLEAN=LógicoObjectType.LONG=InteiroObjectType.DOUBLE=DecimalObjectType.DATETIME=Data  ObjectType.STRING=TextoObjectType.LIST=ListaObjectType.MAP=MapaObjectType.DATASET=TabelaObjectType.JSON=JsonObjectType.XML=XmlObjectType.OBJECT=ObjetoObjectType.UNKNOWN=DesconhecidoObjectType.VOID=Sem retorno
