Adicionado função para chamar blockly do servidor

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -56,14 +56,20 @@
 	"formatDateTime": "Format date",
 	"functionToFormatDateTime": "Function to format date",
 	"getValueIsNotNumber": "Get value that is not number",
-  "functionToGetValueIsNotNumber": "Function to get value that is not number",
+	"functionToGetValueIsNotNumber": "Function to get value that is not number",
 	"format": "Format",
 	"newDate": "New date",
-  "functionToNewDate": "Function to create new date",
-  "month": "Month",
-  "year": "Year",
-  "day": "Day",
-  "hour": "Hour",
-  "minute": "Minute",
-  "second": "Second"
+	"functionToNewDate": "Function to create new date",
+	"month": "Month",
+	"year": "Year",
+	"day": "Day",
+	"hour": "Hour",
+	"minute": "Minute",
+	"second": "Second",
+	"CallServerBlockly": "Call blockly server",
+	"functionToCallServerBlockly": "function to block server call",
+	"classNameWithMethod": "Blockly name",
+	"callbackSuccess": "Callback success: callback function when success",
+	"callbackError": "Callback error: callback function when error occurs",
+	"params": "Parameters"
 }
