Adicionado função para realizar chamada a função para chamar blockly assincronamente

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -73,5 +73,10 @@
 	"callbackError": "Callback error: callback function when error occurs",
 	"params": "Parameters",
 	"callServerBlockly": "Call blockly server",
-	"functionToCallServerBlockly": "function to block server call"
+	"functionToCallServerBlockly": "function to block server call",
+	"makeCallServerBlocklyAsync": "call blockly asynchronous server - callback with blockly",
+	"functionToMakeCallServerBlocklyAsync": "Function to call blockly from the asynchronous server and with possibility to set the callbacks as string (blockly complete name)",
+	"blocklyWithFunction": "Blockly name",
+	"callbackBlocklySuccess": "Callback success: blockly (full) name to be called when to get the server response successfully",
+	"callbackBlocklyError": "Callback error: blockly (full) name to be called when retrieving server response with error"
 }
