--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -68,15 +68,15 @@
   "second": "Segundo",
   "callServerBlocklyAsync": "Chamar blockly servidor assíncrono",
   "functionToCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono",
-  "classNameWithMethod": "Nome do blockly",
+  "classNameWithMethod": "Nome do Bloco",
   "callbackSuccess": "Callback sucesso: função para callback quando for sucesso",
   "callbackError": "Callback erro: função para callback quando ocorrer erro",
   "params": "Parâmetros",
-  "callServerBlockly": "Chamar blockly servidor",
-  "functionToCallServerBlockly": "Função para chamar blockly do servidor",
+  "callServerBlockly": "Chamar Bloco",
+  "functionToCallServerBlockly": "Função para chamar bloco de programação",
   "makeCallServerBlocklyAsync": "Chamar blockly servidor assíncrono - callback com blockly",
   "functionToMakeCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono e com possibilidade de setar os callback como string (nome do blockly completo)",
-  "blocklyWithFunction": "Nome do blockly",
+  "blocklyWithFunction": "Nome do Bloco",
   "callbackBlocklySuccess": "Callback sucesso: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com sucesso",
   "callbackBlocklyError": "Callback erro: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com erro",
   "changeValueOfField":"Alterar valor do campo",
