--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -89,5 +89,7 @@
   "CategoryType.DATETIME": "Data e hora",
   "CategoryType.XML": "Xml",
   "getValueOfField": "Obter valor do campo",
-  "functionToGetValueOfField": "Função para obter valor do campo"
+  "functionToGetValueOfField": "Função para obter valor do campo",
+  "fieldNameFromScreen": "Obter nome do campo",
+  "functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o blockly a tela)"
 }
