--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -84,12 +84,18 @@
 	"field": "Field",
 	"Value": "Value",
 	"CategoryType.CONVERSION": "Conversion",
-  "CategoryType.UTIL": "Util",
-  "CategoryType.SCREEN": "Screen",
-  "CategoryType.DATETIME": "Date and time",
-  "CategoryType.XML": "Xml",
-  "getValueOfField": "Get value of field",
-  "functionToGetValueOfField": "Function to get value of field",
-  "fieldNameFromScreen": "Get field name",
-  "functionToGetFieldNameFromScreen": "Function to get field name (You need to associate the blockly with the screen)"
+	"CategoryType.UTIL": "Util",
+	"CategoryType.SCREEN": "Screen",
+	"CategoryType.DATETIME": "Date and time",
+	"CategoryType.XML": "Xml",
+	"getValueOfField": "Get value of field",
+	"functionToGetValueOfField": "Function to get value of field",
+	"fieldNameFromScreen": "Get field name",
+	"functionToGetFieldNameFromScreen": "Function to get field name (You need to associate the blockly with the screen)",
+	"throwExceptionName": "Throw Exception",
+	"throwExceptionDescription": "Function that throw a exception with a message",
+	"throwExceptionParam0": "Message",
+	"createExceptionName": "Create exception",
+	"createExceptionDescription": "Function that create a exception",
+	"createExceptionParam0": "Message"
 }
