Improvement: Adição de funções de formulário

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -97,5 +97,27 @@
 	"throwExceptionParam0": "Message",
 	"createExceptionName": "Create exception",
 	"createExceptionDescription": "Function that create a exception",
-	"createExceptionParam0": "Message"
+	"createExceptionParam0": "Message",
+	"createScopeVariableName": "Create scope variable",
+	"createScopeVariableDescription": "Function that create a scope variable",
+	"createScopeVariableParam0": "Name",
+	"createScopeVariableParam1": "Value",
+	"startInsertingModeName": "Start the insert mode",
+	"startInsertingModeDescription": "Function that receive a datasource and start the insertion mode",
+	"startInsertingModeParam0": "Datasource",
+	"datasourceFromScreenName": "Get Datasource",
+	"datasourceFromScreenDescription": "Function that return the datasource name from target",
+	"datasourceFromScreenParam0": "Datasource name",
+	"startEditingModeName": "Start edition mode",
+	"startEditingModeDescription": "Function that receive a datasource and start the edition mode",
+	"startEditingModeParam0": "Datasource",
+	"previusRecordName": "Turn back record",
+	"previusRecordDescription": "Function that turn back the datasource cursor",
+	"previusRecordParam0": "Datasource",
+	"nextRecordName": "Go forward record",
+	"nextRecordDescription": "Function that go forward datasource cursor",
+	"nextRecordParam0": "Datasource",
+	"removeRecordName": "Remove record",
+	"removeRecordDescription": "Function that start the datasource remove mode",
+	"removeRecordParam0": "Datasource"
 }
