--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -97,5 +97,27 @@
 	"throwExceptionParam0": "Mensagem",
 	"createExceptionName": "Cria exceção",
 	"createExceptionDescription": "Função que cria exceção",
-	"createExceptionParam0": "Mensagem"
+	"createExceptionParam0": "Mensagem",
+	"createScopeVariableName": "Cria Variável de escopo",
+	"createScopeVariableDescription": "Função que cria varíavel de escopo",
+	"createScopeVariableParam0": "Nome",
+	"createScopeVariableParam1": "Valor",
+	"startInsertingModeName": "Entra em modo de inserção",
+	"startInsertingModeDescription": "Função que recebe um datasource e inicia seu modo de inserção",
+	"startInsertingModeParam0": "Datasource",
+	"datasourceFromScreenName": "Obtém Datasource",
+	"datasourceFromScreenDescription": "Função que retorna o nome do datasource da tela",
+	"datasourceFromScreenParam0": "Datasource",
+	"startEditingModeName": "Entra em modo de edição",
+	"startEditingModeDescription": "Função que recebe um datasource e inicia seu modo de edição",
+	"startEditingModeParam0": "Datasource",
+	"previusRecordName": "Retorna registro",
+	"previusRecordDescription": "Função que retorna o cursor do datasource",
+	"previusRecordParam0": "Datasource",
+	"nextRecordName": "Avança registro",
+	"nextRecordDescription": "Função que avança o cursor do datasource",
+	"nextRecordParam0": "Datasource",
+	"removeRecordName": "Remove registro",
+	"removeRecordDescription": "Função que entra em modo de remoção do datasource",
+	"removeRecordParam0": "Datasource"
 }
