Improvement: Adição da função de notificação.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -137,12 +137,16 @@
 	"functionToGetParam": "Function to get param from query string",
 	"paramName": "Param name",
 	"changeView": "Change view",
-  "functionToChangeView": "Function to change the current view",
-  "view": "Destination view",
-  "openUrl": "Open url",
-  "functionToOpenUrl": "Function to open url",
-  "url": "Destination url",
-  "newTab": "New tab?",
-  "width": "Width",
-  "height": "Height"
+	"functionToChangeView": "Function to change the current view",
+	"view": "Destination view",
+	"openUrl": "Open url",
+	"functionToOpenUrl": "Function to open url",
+	"url": "Destination url",
+	"newTab": "New tab?",
+	"width": "Width",
+	"height": "Height",
+	"screenNotifyName": "Show notification",
+	"screenNotifyDescription": "Function that show a notification",
+	"screenNotifyParam0": "Notification type: Can receive values success, error, warning, info or primary",
+	"screenNotifyParam1": "Message"
 }
