--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -75,7 +75,7 @@
 	"callServerBlockly": "Chamar Bloco",
 	"functionToCallServerBlockly": "Função para chamar bloco de programação",
 	"makeCallServerBlocklyAsync": "Chamar blockly servidor assíncrono - callback com blockly",
-	"functionToMakeCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono e com possibilidade de setar os callback como string (nome do blockly completo)",
+	"functionToMakeCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono e com possibilidade de definir os callback como string (nome do blockly completo)",
 	"blocklyWithFunction": "Nome do Bloco",
 	"callbackBlocklySuccess": "Callback sucesso: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com sucesso",
 	"callbackBlocklyError": "Callback erro: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com erro",
@@ -111,7 +111,7 @@
 	"startEditingModeName": "Entra em modo de edição",
 	"startEditingModeDescription": "Função que recebe um datasource e inicia seu modo de edição",
 	"startEditingModeParam0": "Datasource",
-	"previusRecordName": "Retorna registro",
+	"previusRecordName": "Registro anterior",
 	"previusRecordDescription": "Função que retorna o cursor do datasource",
 	"previusRecordParam0": "Datasource",
 	"nextRecordName": "Avança registro",
@@ -123,13 +123,13 @@
 	"hasNextRecordName": "Existe Próximo Registro?",
 	"hasNextRecordDescription": "Função que retorna se existe próximo registro",
 	"hasNextRecordParam0": "Datasource",
-	"quantityRecordsName": "Quantidade de Registros",
+	"quantityRecordsName": "Total de Registros",
 	"quantityRecordsDescription": "Função que retorna a quantidade total de registros do datasource",
 	"quantityRecordsParam0": "Datasource",
 	"datasourcePostName": "Post",
 	"datasourcePostDescription": "Função que chama o método post() do datasource",
 	"datasourcePostParam0": "Datasouce",
-	"datasourceFilterName": "Filtro",
+	"datasourceFilterName": "Filtrar",
 	"datasourceFilterDescription": "Função que filtra um datasource concatenando '/' e o caminho do parâmetro",
 	"datasourceFilterParam0": "Datasource",
 	"datasourceFilterParam1": "Caminho",
@@ -144,5 +144,9 @@
   "url": "Url de destino",
   "newTab": "Nova aba?",
   "width": "Largura",
-  "height": "Altura"
+  "height": "Altura",
+  "screenNotifyName":"Exibe notificação",
+  "screenNotifyDescription":"Função que exibe notificação",
+  "screenNotifyParam0":"Tipo da notificação: pode ser success, error, warning, info ou primary",
+  "screenNotifyParam1":"Mensagem"
 }
