--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -137,23 +137,33 @@
 	"functionToGetParam": "Função para obter parâmetro da query string",
 	"paramName": "Nome do parâmetro",
 	"changeView": "Mudar view",
-  "functionToChangeView": "Função para mudar a view corrente",
-  "view": "View de destino",
-  "openUrl": "Abrir url",
-  "functionToOpenUrl": "Função para abrir url",
-  "url": "Url de destino",
-  "newTab": "Nova aba?",
-  "width": "Largura",
-  "height": "Altura",
-  "screenNotifyName":"Exibe notificação",
-  "screenNotifyDescription":"Função que exibe notificação",
-  "screenNotifyParam0":"Tipo da notificação: pode ser success, error, warning, info ou primary",
-  "screenNotifyParam1":"Mensagem",
-  "getScopeVariableName":"Obtém variável de escopo",
-  "getScopeVariableDescription":"Função que obtém o valor da variável de escopo",
-  "getScopeVariableParam0":"Nome da varíavel",
-  "ObjectType.DATETIME":"Data",
-  "confirmDialogName":"Confirmar ação",
-  "confirmDialogDescription":"Função que exibe uma confirmação da ação e retorna verdadeiro ou falso",
-  "confirmDialogParam0":"Mensagem"
+	"functionToChangeView": "Função para mudar a view corrente",
+	"view": "View de destino",
+	"openUrl": "Abrir url",
+	"functionToOpenUrl": "Função para abrir url",
+	"url": "Url de destino",
+	"newTab": "Nova aba?",
+	"width": "Largura",
+	"height": "Altura",
+	"screenNotifyName": "Exibe notificação",
+	"screenNotifyDescription": "Função que exibe notificação",
+	"screenNotifyParam0": "Tipo da notificação: pode ser success, error, warning, info ou primary",
+	"screenNotifyParam1": "Mensagem",
+	"getScopeVariableName": "Obtém variável de escopo",
+	"getScopeVariableDescription": "Função que obtém o valor da variável de escopo",
+	"getScopeVariableParam0": "Nome da varíavel",
+	"ObjectType.DATETIME": "Data",
+	"confirmDialogName": "Confirmar ação",
+	"confirmDialogDescription": "Função que exibe uma confirmação da ação e retorna verdadeiro ou falso",
+	"confirmDialogParam0": "Mensagem",
+	"createDefaultModalDescription": "Função que cria um modal",
+	"createDefaultModalName": "Cria Modal",
+	"createDefaultModalParam0": "Identificador",
+	"createDefaultModalParam1": "Titulo",
+	"createDefaultModalParam2": "Mensagem",
+	"createDefaultModalParam3": "Nome do botão cancelar",
+	"createDefaultModalParam4": "Nome do botão confirmar",
+	"showModalName":"Exibe modal",
+	"showModalDescription":"Função que exibe um modal",
+	"showModalParam0":"Modal"
 }
