--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -10,7 +10,7 @@
 	"convertToAscii": "Convert char to ASCII code",
 	"functionToConvertToAscii": "Function to convert char to ASCII code",
 	"content": "Content",
-	"convertStringToJs": "Convert javascript text to escaped text",
+	"convertStringToJs": "Text to javascript text",
 	"functionToConvertStringToJs": "Function to convert text to javascript escaping text",
 	"convertStringToDate": "Convert text to data",
 	"functionToConvertStringToDate": "Function to convert text to data",
