Muidança de nomes views para tela

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -136,9 +136,9 @@
 	"getParam": "Obter parâmetro",
 	"functionToGetParam": "Função para obter parâmetro da query string",
 	"paramName": "Nome do parâmetro",
-	"changeView": "Mudar view",
-	"functionToChangeView": "Função para mudar a view corrente",
-	"view": "View de destino",
+	"changeView": "Mudar tela",
+	"functionToChangeView": "Função para mudar a tela corrente",
+	"view": "Tela de destino",
 	"openUrl": "Abrir url",
 	"functionToOpenUrl": "Função para abrir url",
 	"url": "Url de destino",
