--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -163,7 +163,9 @@
 	"createDefaultModalParam2": "Mensagem",
 	"createDefaultModalParam3": "Nome do botão cancelar",
 	"createDefaultModalParam4": "Nome do botão confirmar",
-	"showModalName":"Exibe modal",
-	"showModalDescription":"Função que exibe um modal",
-	"showModalParam0":"Modal"
+	"showModalName": "Exibe modal",
+	"showModalDescription": "Função que exibe um modal",
+	"showModalParam0": "Modal",
+	"createDefaultModalParam5": "No Sucesso",
+	"createDefaultModalParam6": "No Erro"
 }
