--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -167,5 +167,27 @@
 	"showModalDescription": "Function that shows a modal",
 	"showModalParam0": "Modal",
 	"createDefaultModalParam5": "On Success",
-	"createDefaultModalParam6": "On Error"
+	"createDefaultModalParam6": "On Error",
+	"XMLGetElementValue": "Get element value",
+	"XMLGetElementValueDescription": "Function that return a element value",
+	"XMLGetElementValueParam0": "Element: Element to get value",
+	"XMLGetChildElementName": "Get first child element",
+	"XMLGetChildElementDescription": "Function to return node",
+	"node": "Node",
+	"childName": "Child name",
+	"XMLGetRootName": "Get root element",
+	"XMLGetRootDescription": "Function that return the root element from a element",
+	"element": "Element",
+	"XMLGetAttributeName": "Get attribute from element",
+	"XMLGetAttributeDescription": "Function that return a attribute from a element",
+	"attribute": "Attribute",
+	"XMLOpenName": "Create xml document",
+	"XMLOpenDescription": "Função que cria um objeto Document a partir de uma String",
+	"XMLOpenParam0": "XML name",
+	"XMLGetChildrenElementName": "Search elementl children",
+	"XMLGetChildrenElementDescription": "Function that return the element children from element",
+	"XMLGetParentElementName": "return the parent element",
+	"XMLGetParentElementDescription": "Function that return the parent element",
+	"XMLGetElementTagNameName": "Get element tag",
+	"XMLGetElementTagNameDescription": "Function that return the element tag"
 }
