--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -167,5 +167,27 @@
 	"showModalDescription": "Função que exibe um modal",
 	"showModalParam0": "Modal",
 	"createDefaultModalParam5": "No Sucesso",
-	"createDefaultModalParam6": "No Erro"
+	"createDefaultModalParam6": "No Erro",
+	"XMLGetElementValue": "Obtém valor do elemento",
+	"XMLGetElementValueDescription": "Função que retorna o valor de um elemento",
+	"XMLGetElementValueParam0": "Elemento passado para obter-se o valor",
+	"XMLGetChildElementName": "Obtém o primeiro filho do elemento",
+	"XMLGetChildElementDescription": "Função para retornar o nó",
+	"node": "Nó",
+	"childName": "Nome do filho",
+	"XMLGetRootName": "Obtém a raiz do elemento",
+	"XMLGetRootDescription": "Função que retorna o elemento raiz a partir de um elemento",
+	"element": "Elemento",
+	"XMLGetAttributeName": "Obtém o atributo do elemento",
+	"XMLGetAttributeDescription": "Função que retorna o atributo de um elemento",
+	"attribute": "Atributo",
+	"XMLOpenName": "Cria documento xml",
+	"XMLOpenDescription": "Função que cria um objeto Document a partir de uma String",
+	"XMLOpenParam0": "Nome para xml",
+	"XMLGetChildrenElementName": "Busca filhos do elemento",
+	"XMLGetChildrenElementDescription": "Função que retorna os filhos do tipo de um determinado elemento",
+	"XMLGetParentElementName": "Retorna o elemento pai",
+	"XMLGetParentElementDescription": "Função que retorna o pai de um elemento",
+	"XMLGetElementTagNameName": "Obtém a tag do elemento",
+	"XMLGetElementTagNameDescription": "Função que retorna o nome da tag do elemento"
 }
