--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -190,5 +190,12 @@
 	"XMLGetParentElementDescription": "Função que retorna o pai de um elemento",
 	"XMLGetElementTagNameName": "Obtém a tag do elemento",
 	"XMLGetElementTagNameDescription": "Função que retorna o nome da tag do elemento",
-	"XMLGetElementValueName":"Obter valor do elemento"
+	"XMLGetElementValueName":"Obter valor do elemento",
+  "LogicIsNullParam" : "Variável : Variável a ser verificada",
+  "LogicIsNullName": "é nulo?",
+  "LogicIsNullDescription" : "Função que verifique se a variável é nula",
+  "LogicIsNullOrEmptyName": "é nulo ou vazio?",
+  "LogicIsNullOrEmptyDescription" : "Função que verifique se a variável é nula ou vazia",
+  "LogicIsEmptyName": "é vazio?",
+  "LogicIsEmptyDescription" : "Função que verifique se a variável é vazia"
 }
