Mudanças em nomenclaturas

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -85,13 +85,13 @@
 	"Value": "Value",
 	"CategoryType.CONVERSION": "Conversion",
 	"CategoryType.UTIL": "Util",
-	"CategoryType.SCREEN": "Screen",
+	"CategoryType.SCREEN": "Form",
 	"CategoryType.DATETIME": "Date and time",
 	"CategoryType.XML": "Xml",
 	"getValueOfField": "Get value of field",
 	"functionToGetValueOfField": "Function to get value of field",
 	"fieldNameFromScreen": "Get field name",
-	"functionToGetFieldNameFromScreen": "Function to get field name (You need to associate the blockly with the screen)",
+	"functionToGetFieldNameFromScreen": "Function to get field name (You need to associate the blockly with the form)",
 	"throwExceptionName": "Throw Exception",
 	"throwExceptionDescription": "Function that throw a exception with a message",
 	"throwExceptionParam0": "Message",
