--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -85,13 +85,13 @@
 	"value": "Valor",
 	"CategoryType.CONVERSION": "Conversão",
 	"CategoryType.UTIL": "Util",
-	"CategoryType.SCREEN": "Tela",
+	"CategoryType.SCREEN": "Formulário",
 	"CategoryType.DATETIME": "Data e hora",
 	"CategoryType.XML": "Xml",
 	"getValueOfField": "Obter valor do",
 	"functionToGetValueOfField": "Função para obter valor do campo",
 	"fieldNameFromScreen": "Obter nome do campo",
-	"functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o blockly a tela)",
+	"functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o blockly ao formulário)",
 	"throwExceptionName": "Lança exceção",
 	"throwExceptionDescription": "Função que lança exceção com uma mensagem",
 	"throwExceptionParam0": "Mensagem",
@@ -103,42 +103,42 @@
 	"createScopeVariableParam0": "Nome",
 	"createScopeVariableParam1": "Valor",
 	"startInsertingModeName": "Entra em modo de inserção",
-	"startInsertingModeDescription": "Função que recebe um datasource e inicia seu modo de inserção",
-	"startInsertingModeParam0": "Datasource",
-	"datasourceFromScreenName": "Obtém Datasource",
-	"datasourceFromScreenDescription": "Função que retorna o nome do datasource da tela",
-	"datasourceFromScreenParam0": "Datasource",
+	"startInsertingModeDescription": "Função que recebe uma Fonte de dados e inicia seu modo de inserção",
+	"startInsertingModeParam0": "Fonte de dados",
+	"datasourceFromScreenName": "Obtém Fonte de dados",
+	"datasourceFromScreenDescription": "Função que retorna o nome da fonte de dados do formulário",
+	"datasourceFromScreenParam0": "Fonte de dados",
 	"startEditingModeName": "Entra em modo de edição",
-	"startEditingModeDescription": "Função que recebe um datasource e inicia seu modo de edição",
-	"startEditingModeParam0": "Datasource",
+	"startEditingModeDescription": "Função que recebe uma fonte de dados e inicia seu modo de edição",
+	"startEditingModeParam0": "Fonte de dados",
 	"previusRecordName": "Registro anterior",
-	"previusRecordDescription": "Função que retorna o cursor do datasource",
-	"previusRecordParam0": "Datasource",
+	"previusRecordDescription": "Função que retorna o cursor da Fonte de dados",
+	"previusRecordParam0": "Fonte de dados",
 	"nextRecordName": "Avança registro",
-	"nextRecordDescription": "Função que avança o cursor do datasource",
-	"nextRecordParam0": "Datasource",
+	"nextRecordDescription": "Função que avança o cursor da Fonte de dados",
+	"nextRecordParam0": "Fonte de dados",
 	"removeRecordName": "Remove registro",
-	"removeRecordDescription": "Função que entra em modo de remoção do datasource",
-	"removeRecordParam0": "Datasource",
+	"removeRecordDescription": "Função que entra em modo de remoção da Fonte de dados",
+	"removeRecordParam0": "Fonte de dados",
 	"hasNextRecordName": "Existe Próximo Registro?",
 	"hasNextRecordDescription": "Função que retorna se existe próximo registro",
-	"hasNextRecordParam0": "Datasource",
+	"hasNextRecordParam0": "Fonte de dados",
 	"quantityRecordsName": "Total de Registros",
-	"quantityRecordsDescription": "Função que retorna a quantidade total de registros do datasource",
-	"quantityRecordsParam0": "Datasource",
-	"datasourcePostName": "Post",
-	"datasourcePostDescription": "Função que chama o método post() do datasource",
-	"datasourcePostParam0": "Datasouce",
+	"quantityRecordsDescription": "Função que retorna a quantidade total de registros da Fonte de dados",
+	"quantityRecordsParam0": "Fonte de dados",
+	"datasourcePostName": "Enviar",
+	"datasourcePostDescription": "Função que chama o método enviar da fonte de dados",
+	"Fonte de dadosPostParam0": "Fonte de dados",
 	"datasourceFilterName": "Filtrar",
-	"datasourceFilterDescription": "Função que filtra um datasource concatenando '/' e o caminho do parâmetro",
-	"datasourceFilterParam0": "Datasource",
+	"datasourceFilterDescription": "Função que filtra uma Fonte de dados concatenando '/' e o caminho do parâmetro",
+	"datasourceFilterParam0": "Fonte de dados",
 	"datasourceFilterParam1": "Caminho",
 	"getParam": "Obter parâmetro",
 	"functionToGetParam": "Função para obter parâmetro da query string",
 	"paramName": "Nome do parâmetro",
-	"changeView": "Mudar tela",
-	"functionToChangeView": "Função para mudar a tela corrente",
-	"view": "Tela de destino",
+	"changeView": "Mudar formulário",
+	"functionToChangeView": "Função para mudar o formulário corrente",
+	"view": "formulário de destino",
 	"openUrl": "Abrir url",
 	"functionToOpenUrl": "Função para abrir url",
 	"url": "Url de destino",
